# hex2bin

./: CMakeLists.txt  README  binary.c  build.py  build_cmake.py  build_makefile.py  checksum.h  common.c  common.h  hex2bin.c  libcrc.c  libcrc.h  mot2bin.c
doc/: README  user_command.txt
src/: Makefile  README  binary.c  binary.h  checksum.c  checksum.h  common.c  common.h  hex2bin.c  mot2bin.c
